# tc-backend

./: .env  .gitignore  Dockerfile  GEMINI.md  create_superuser.py  docker-compose.yml  pyproject.toml
app/: celery_app.py  config.py  crud.py  database.py  main.py  models.py  schemas.py  security.py  tasks.py
migrations/: README  env.py
migrations/versions/: 50174bf3e143_add_teams_and_players_tables.py  99f6a602422a_initial_database_setup_with_users_table.py
